# poc-ai-convolutional

./: .gitignore  README.md  pyproject.toml
src/app/: main.py
tests/: test_app.py
