[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
tensorflow = "^2.16.1"
matplotlib = "^3.8.4"
python-multipart = "^0.0.9"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.2"

[tool.taskipy.tasks]
run = "uvicorn src.app.main:app --reload"

[tool.pytest.ini_options]
testpaths = ["tests",]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
